--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.5.1",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "vercel": "^33.0.1"
   },
   "devDependencies": {
+    "@types/react": "18.2.46",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
